--- a/styles/style.css
+++ b/styles/style.css
@@ -341,6 +341,7 @@ body {
 .slider-images {
    height: 100%;
    width: 100%;
+   background-image: url("../image/image2.png");
 }
 
 /* section projects end*/
