--- a/styles/style.css
+++ b/styles/style.css
@@ -341,7 +341,7 @@ body {
 .slider-images {
    height: 100%;
    width: 100%;
-   background-image: url("../image/image2.png");
+   background-image: url("../Image/Image2.png");
 }
 
 /* section projects end*/
