--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -371,6 +371,9 @@
    width: 100%;
    margin-bottom: 20px;
 }
+.inst-img-mobile {
+   margin-bottom: 6.5px;
+}
 .email-img-mobile {
    margin-right: 15px;
 }
