--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -1,6 +1,10 @@
 * {
    font-size: 14px;
 }
+
+.projects-city {
+   padding-top: 36px;
+}
 .container {
    max-width: 90%;
    margin: 0 auto;
@@ -19,24 +23,43 @@
    padding-top: 85px;
    padding-bottom: 16px;
    line-height: 40px;
+   font-family: "Yeseva One";
+   font-size: 23px;
+   line-height: 133%;
+   text-transform: uppercase;
+   color: #ffffff;
 }
+.hero-container {
+   margin: 0 auto;
+}
+.city1 {
+   font-family: "Yeseva One";
+   font-size: 23px;
+   line-height: 133%;
+   text-transform: uppercase;
+}
+
 .hero-text {
    line-height: 25px;
+   font-family: "Nunito Sans";
+   font-size: 14px;
+   line-height: 136%;
+   width: 100%;
 }
 .button-hero {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
-   padding-bottom: 61px;
+   padding-bottom: 40px;
 }
 .button-cost,
 .button-application {
-   width: 90%;
+   width: 100%;
 }
 .project-section {
    background: black;
-   padding-bottom: 60px;
+   padding-bottom: 61px;
 }
 .projects-container__left,
 .projects-container__menu-right {
@@ -51,7 +74,7 @@
 }
 .projects-container__title {
    font-family: "Yeseva One";
-   font-size: 27px;
+   font-size: 22px;
    font-weight: 400;
    color: #e3b873;
    line-height: 37px;
@@ -61,12 +84,14 @@
    width: 50%;
 }
 .projects-text {
-   font-size: 14px;
+   font-size: 11px;
    line-height: 27px;
    font-weight: 400;
-   width: 90%;
+
    margin-bottom: 36px;
    text-align: center;
+   width: 311px;
+   height: 86px;
 }
 .slider-images-mobile {
    width: 90%;
@@ -88,7 +113,7 @@
    border-radius: 50%;
    background-color: #e3b873;
    position: absolute;
-   top: 50%;
+   top: 45%;
    left: 0;
    text-align: center;
    display: flex;
@@ -105,7 +130,7 @@
    background-color: #e3b873;
    position: absolute;
    text-align: center;
-   top: 50%;
+   top: 45%;
    right: 0;
    display: flex;
    align-items: center;
@@ -120,12 +145,12 @@
 }
 .subtitle__projects {
    text-transform: uppercase;
-   font-size: 18px;
+   font-size: 14px;
    line-height: 25px;
    margin-bottom: 9px;
 }
 .projects-text__item {
-   font-size: 13px;
+   font-size: 11px;
    line-height: 21px;
 }
 .project__item-title {
@@ -141,18 +166,22 @@
 .video-sec {
    background-color: black;
 }
+.online-control__title {
+   font-size: 22px;
+}
 .video__text {
    margin: 0 auto;
    text-align: center;
    width: 90%;
-   font-size: 18px;
-   line-height: 37px;
+   font-size: 11px;
+
    font-weight: 400;
    color: white;
+   line-height: 170%;
 }
 .video-play {
-   width: 90%;
-   height: auto;
+   width: 100%;
+   height: 207px;
    background-image: url("../image/image  online control.png");
    background-repeat: no-repeat;
    background-size: cover;
@@ -160,6 +189,7 @@
    margin: 0 auto;
    margin-top: 59px;
 }
+
 .video-sec-input {
    display: none;
 }
@@ -236,6 +266,10 @@
    justify-content: space-between;
    margin: 0;
 }
+.trio-box {
+   margin-left: 0;
+}
+
 .types__block-of-repair-left,
 .types__block-of-repair-center {
    margin-bottom: 200px;
@@ -274,7 +308,7 @@
    text-align: center;
 }
 .realized-projects-icon {
-   background-image: url("../image/imagerealized.png");
+   background-image: url(../image/imagerealized.png);
    width: 100%;
    height: 30vh;
    background-repeat: no-repeat;
@@ -289,12 +323,13 @@
    border-radius: 50%;
    background-color: #e3b873;
    position: absolute;
-   top: 50%;
    text-align: center;
+   left: 0;
+   top: 45%;
    display: flex;
    align-items: center;
    justify-content: center;
-   margin-left: 20px;
+   margin-right: 20px;
 }
 .realized-projects-icon ::after {
    content: "\003E";
@@ -304,13 +339,14 @@
    background-color: #e3b873;
    position: absolute;
    text-align: center;
-   top: 50%;
+   top: 45%;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 20px;
 }
+
 .contacts {
    display: none;
 }
