--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&family=Yeseva+One&display=swap");
 
 * {
-   font-size: 16px;
    margin: 0;
    padding: 0;
 }
@@ -19,7 +18,7 @@ body {
 }
 
 .button {
-   font-size: 013px;
+   font-size: 13px;
    color: #ffffff;
    background-color: #e3b873;
    border-radius: 2px;
@@ -43,6 +42,10 @@ body {
    text-transform: uppercase;
    font-style: italic;
    cursor: pointer;
+   width: 167px;
+   height: 37px;
+   font-size: 11px;
+   line-height: 15px;
 }
 .link__phone {
    text-decoration: underline;
@@ -86,6 +89,8 @@ body {
 }
 .header__navigation-item {
    margin-right: 47px;
+   font-size: 11px;
+   line-height: 15px;
 }
 .header__navigation-item a {
    text-decoration: none;
@@ -861,57 +866,61 @@ body {
    margin-left: 25px;
 }
 .persons-text {
-   color: #959595;
-   line-height: 23px;
-   font-weight: 400;
    font-size: 13px;
+   line-height: 180%;
+   color: #959595;
+   width: 324px;
+   margin-top: 20px;
+   margin-left: 20px;
+   margin-bottom: 70px;
 }
-.clients-button-line,
-.clients-button-list {
-   background-color: #e3b873;
+.clients-button-line {
    display: flex;
-   justify-content: flex-start;
+   justify-content: space-around;
+   align-content: center;
    align-items: center;
+   border-right: 0.75px solid #ffffff;
+   width: 134px;
+   height: 53px;
 }
-.clients-button-list {
-   margin-left: 1px;
-}
+
 .clients-button {
    display: flex;
-   justify-content: flex-start;
-   margin-left: -15px;
-   margin-top: 63px;
+   justify-content: space-around;
+   align-content: center;
+   align-items: center;
+   width: 294px;
+   height: 53px;
+   background: #e3b873;
+   box-shadow: 5px 5px 20px rgba(227, 184, 115, 0.5);
+   margin-top: -30px;
 }
-.clients-button-text,
-.clients-button-text-two {
-   line-height: 24px;
-   font-family: "Yeseva One";
-   font-weight: 400;
-   font-size: 17px;
-}
-.clients-button-line-icon {
-   width: 33px;
+.clients-icon {
+   width: 32px;
    height: 31px;
-   margin: 11px 15px 11px 17px;
+   padding-top: 5px;
 }
 .clients-button-text {
-   margin-right: 14px;
-   margin-top: 17px;
-   margin-bottom: 17px;
+   font-family: "YesevaOne";
+   font-size: 17px;
+   text-transform: uppercase;
+   color: #ffffff;
+   font-weight: 400;
+   text-align: center;
+   margin-right: 15px;
 }
-.clients-button-list-icon {
-   width: 33px;
-   height: 32px;
-   margin: 11px 15px 12px 17px;
-}
-.clients-button-text-two {
-   margin: 17px 13px 17px 15px;
-}
+
 .clients-person-cover {
    max-width: 27%;
    padding-top: 14px;
    padding-left: 15px;
    padding-right: 40px;
+}
+.client__size-box {
+   width: 376px;
+   height: 428px;
+   background-color: #ffffff;
+   box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
 }
 
 /*section clients end*/
